[tool.poetry]
name = "rrshare"
version = "3.10.09"
description = "stock data(from tusharepro) & analysis"
authors = ["rome"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tushare = "^1.2.62"
zenlog = "^1.1"
click = "^7.1.2"
easyquotation = "^0.7.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
black = "^21.4b0"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"

[tool.poetry.scripts]
rrshare = 'rrshare:entry_point'


